BAEL-9208 - Changing to manual tests until Jenkins Docker env is working (#18561)
* Changing to manual tests until Jenkins Docker env is working.

* bael-9208 dapr manual tests