@@ -1,10 +1,8 @@
-package com.baeldung.dapr.pubsub.publisher;
+package com.baeldung.dapr.pubsub.subscriber;
 
-import static io.restassured.RestAssured.given;
 import static org.awaitility.Awaitility.await;
-import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.Matchers.greaterThan;
-import static org.hamcrest.Matchers.is;
 
 import java.time.Duration;
 
@@ -18,16 +16,20 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.testcontainers.Testcontainers;
 import org.testcontainers.containers.wait.strategy.Wait;
 
+import com.baeldung.dapr.pubsub.model.RideRequest;
+
+import io.dapr.spring.messaging.DaprMessagingTemplate;
 import io.dapr.springboot.DaprAutoConfiguration;
 import io.dapr.testcontainers.DaprContainer;
-import io.restassured.RestAssured;
-import io.restassured.http.ContentType;
 
-@SpringBootTest(classes = { DaprPublisherTestApp.class, DaprTestContainersConfig.class, DaprAutoConfiguration.class }, webEnvironment = SpringBootTest.WebEnvironment.DEFINED_PORT)
-class DaprPublisherIntegrationTest {
+@SpringBootTest(classes = { DaprSubscriberTestApp.class, DaprTestContainersConfig.class, DaprMessagingConfig.class, DaprAutoConfiguration.class }, webEnvironment = SpringBootTest.WebEnvironment.DEFINED_PORT)
+class DaprSubscriberManualTest {
 
-    private static final Logger logger = LoggerFactory.getLogger(DaprPublisherIntegrationTest.class);
+    private static final Logger logger = LoggerFactory.getLogger(DaprSubscriberManualTest.class);
     private static final String READY_MESSAGE_PATTERN = ".*app is subscribed to the following topics.*";
+
+    @Autowired
+    DaprMessagingTemplate<RideRequest> messaging;
 
     @Autowired
     DriverRestController controller;
@@ -44,8 +46,6 @@ class DaprPublisherIntegrationTest {
     @BeforeEach
     void setUp() {
         logger.info("[bael] test setup");
-
-        RestAssured.baseURI = "http://localhost:" + serverPort;
         Testcontainers.exposeHostPorts(serverPort);
 
         logger.info("[bael] waiting for ready...");
@@ -55,42 +55,22 @@ class DaprPublisherIntegrationTest {
     }
 
     @Test
-    void whenDriveUnacceptable_thenDrivesAcceptedIncrease() {
+    void whenDriveAcceptable_thenDrivesAcceptedIncrease() {
         int drivesAccepted = controller.getDrivesAccepted();
 
-        given().contentType(ContentType.JSON)
-            .body("""
-                {
-                "passengerId": "1",
-                "location": "Point A",
-                "destination": "%s Point B"
-                }
-                """.formatted(criteria))
-            .when()
-            .post("/passenger/request-ride")
-            .then()
-            .statusCode(200);
+        RideRequest ride = new RideRequest("1", "Point A", String.format("%s Point B", criteria));
+        messaging.send(DriverRestController.RIDE_REQUESTS_TOPIC, ride);
 
         await().atMost(Duration.ofSeconds(5))
-            .until(controller::getDrivesAccepted, is(equalTo(drivesAccepted + 1)));
+            .until(controller::getDrivesAccepted, equalTo(drivesAccepted + 1));
     }
 
     @Test
-    void whenDriveAcceptable_thenDrivesRejectedIncrease() {
+    void whenDriveUnacceptable_thenDrivesRejectedIncrease() {
         int drivesRejected = controller.getDrivesRejected();
 
-        given().contentType(ContentType.JSON)
-            .body("""
-                {
-                "passengerId": "2",
-                "location": "Point B",
-                "destination": "West Side A"
-                }
-                """)
-            .when()
-            .post("/passenger/request-ride")
-            .then()
-            .statusCode(200);
+        RideRequest request = new RideRequest("2", "Point B", "West Side Point A");
+        messaging.send(DriverRestController.RIDE_REQUESTS_TOPIC, request);
 
         await().atMost(Duration.ofSeconds(5))
             .until(controller::getDrivesRejected, greaterThan(drivesRejected));
